# compiler-design

./: .gitignore  CMakeLists.txt  Interpreter.cpp  Interpreter.h  LexAnalyzer.cpp  LexAnalyzer.h  PCode.cpp  PCode.h  PartialCode.cpp  PartialCode.h  SymTable.cpp  SymTable.h  SymbolTable.cpp  SymbolTable.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  Utils.cpp  Utils.h  constants.h  main.cpp  utils.cpp  utils.h  variables.h  上机练习一：词法分析.md
output/: 0-Success.pcode  shuixianhua.pcode  test.pcode
testcode/: 0-AllError.txt  0-test-SuccessExpected.txt  1-InvalidToken.txt  1-MissingProgram.txt  1-test-Expect:=.txt  10-test-MissingDo.txt  11-test-Missing).txt  12-test-IllegalTkoenAfterFactor.txt  2-InvalidToken.txt  2-test-NumberExpected.txt  3-InvalidDefined.txt  3-test-:=Expected.txt  4-UnexpectedToken.txt  4-test-WrongId.txt  5-MissingExpr.txt  5-test-MissingSemicolon.txt  6-MissingComma.txt  6-test-ProcedureMissingBegin.txt  7-UndefinedIdentifier.txt  8-RedeclearedIdentifier.txt  8-test-CallMissingId.txt  9-InvalidIdentifierName.txt  9-test-MissingThen.txt  allError.txt  samples.md  shuixianhua.txt  test-Lex-InvalidToken  test-Lex-SuccessExpected  test.txt
